@@ -1,11 +1,19 @@
 package nl.mxndarijn.wieisdemol.data;
 
 import net.kyori.adventure.text.Component;
-import nl.mxndarijn.api.inventory.*;
+import net.kyori.adventure.text.minimessage.MiniMessage;
+import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
+import nl.mxndarijn.api.inventory.MxInventoryIndex;
+import nl.mxndarijn.api.inventory.MxInventoryManager;
+import nl.mxndarijn.api.inventory.MxInventorySlots;
+import nl.mxndarijn.api.inventory.MxItemClicked;
 import nl.mxndarijn.api.inventory.menu.MxListInventoryBuilder;
 import nl.mxndarijn.api.item.MxSkullItemStackBuilder;
 import nl.mxndarijn.api.item.Pair;
+import nl.mxndarijn.api.logger.LogLevel;
+import nl.mxndarijn.api.logger.Logger;
 import nl.mxndarijn.api.util.Functions;
+import nl.mxndarijn.api.util.MSG;
 import nl.mxndarijn.wieisdemol.WieIsDeMol;
 import nl.mxndarijn.wieisdemol.game.Game;
 import nl.mxndarijn.wieisdemol.managers.MapManager;
@@ -14,7 +22,7 @@ import nl.mxndarijn.wieisdemol.managers.language.LanguageText;
 import nl.mxndarijn.wieisdemol.managers.world.GameWorldManager;
 import nl.mxndarijn.wieisdemol.map.Map;
 import nl.mxndarijn.wieisdemol.map.mapplayer.MapPlayer;
-import org.bukkit.ChatColor;
+
 import org.bukkit.NamespacedKey;
 import org.bukkit.entity.Player;
 import org.bukkit.event.inventory.InventoryClickEvent;
@@ -31,48 +39,80 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 public enum ItemTag {
+    NOTSILENT("notsilent", data -> {
+        boolean dataBoolean = true;
+        if (data != null && data.equalsIgnoreCase("false"))
+            dataBoolean = false;
+        return MxSkullItemStackBuilder.create(1)
+                .setSkinFromHeadsData("Silent")
+                .setName("<gray>Silent")
+                .addBlankLore()
+                .addLore("<gray>Status: " + (dataBoolean ? "<green>Not silent" : "<red>silent"))
+                .addBlankLore()
+                .addLore("<yellow>Klik hier om de status te togglen.")
+                .build();
+    }, (mxInv, e) -> {
+        onClick(e, "notsilent", "Silent");
+    }),
+    LIFEBOUND("lifebound", data -> {
+        boolean dataBoolean = true;
+        if (data != null && data.equalsIgnoreCase("false"))
+            dataBoolean = false;
+        return MxSkullItemStackBuilder.create(1)
+                .setSkinFromHeadsData("Lifebound")
+                .setName("<gray>Lifebound")
+                .addBlankLore()
+                .addLore("<gray>Status: " + (dataBoolean ? "<green>Not lifebound" : "<red>lifebound"))
+                .addBlankLore()
+                .addLore("<yellow>Klik hier om de status te togglen.")
+                .build();
+    }, (mxInv, e) -> {
+        onClick(e, "lifebound", "Lifebound");
+    }),
+    SOULBOUND("soulbound", data -> {
+        boolean dataBoolean = true;
+        if (data != null && data.equalsIgnoreCase("false"))
+            dataBoolean = false;
+        return MxSkullItemStackBuilder.create(1)
+                .setSkinFromHeadsData("Soulbound")
+                .setName("<gray>Soulbound")
+                .addBlankLore()
+                .addLore("<gray>Status: " + (dataBoolean ? "<green>Not soulbound" : "<red>soulbound"))
+                .addBlankLore()
+                .addLore("<yellow>Klik hier om de status te togglen.")
+                .build();
+    }, (mxInv, e) -> {
+        onClick(e, "soulbound", "Soulbound");
+    }),
+    DROPPABLEONCE("droppableonce", data -> {
+        boolean dataBoolean = true;
+        if (data != null && data.equalsIgnoreCase("false"))
+            dataBoolean = false;
+        return MxSkullItemStackBuilder.create(1)
+                .setSkinFromHeadsData("droppable-once")
+                .setName("<gray>Droppable Once")
+                .addBlankLore()
+                .addLore("<gray>Status: " + (dataBoolean ? "<green>Not droppable" : "<red>droppable"))
+                .addBlankLore()
+                .addLore("<yellow>Klik hier om de status te togglen.")
+                .build();
+    }, (mxInv, e) -> {
+        onClick(e, "droppableonce", "Droppable Once");
+    }),
     DROPPABLE("droppable", data -> {
         boolean dataBoolean = true;
         if (data != null && data.equalsIgnoreCase("false"))
             dataBoolean = false;
         return MxSkullItemStackBuilder.create(1)
                 .setSkinFromHeadsData("dropper")
-                .setName(ChatColor.GRAY + "Droppable")
+                .setName("<gray>Droppable")
                 .addBlankLore()
-                .addLore(ChatColor.GRAY + "Status: " + (dataBoolean ? ChatColor.GREEN + "Droppable" : ChatColor.RED + "Undroppable"))
+                .addLore("<gray>Status: " + (dataBoolean ? "<green>Droppable" : "<red>Undroppable"))
                 .addBlankLore()
-                .addLore(ChatColor.YELLOW + "Klik hier om de status te togglen.")
+                .addLore("<yellow>Klik hier om de status te togglen.")
                 .build();
     }, (mxInv, e) -> {
-        String key = "droppable";
-        ItemStack is = e.getWhoClicked().getInventory().getItemInMainHand();
-        ItemMeta im = is.getItemMeta();
-
-        PersistentDataContainer container = im.getPersistentDataContainer();
-        String data = container.get(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING);
-
-        boolean dataBoolean = true;
-        if (data != null && data.equalsIgnoreCase("false"))
-            dataBoolean = false;
-        dataBoolean = !dataBoolean;
-        container.set(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING, dataBoolean + "");
-        String lore = ChatColor.RED + "Undroppable";
-        List<Component> list = im.hasLore() ? im.lore() : new ArrayList<>();
-        if (dataBoolean) {
-            List<Component> newList = new ArrayList<>();
-            list.forEach(c -> {
-                if (!Functions.convertComponentToString(c).equalsIgnoreCase(lore)) {
-                    newList.add(c);
-                }
-            });
-            list = newList;
-        } else {
-            list.add(Component.text(lore));
-        }
-        im.lore(list);
-        is.setItemMeta(im);
-        e.getWhoClicked().closeInventory();
-        e.getWhoClicked().sendMessage(LanguageManager.getInstance().getLanguageString(LanguageText.ITEMTAG_CHANGED));
+        onClick(e, "droppable", "Undroppable");
     }),
     VANISHABLE("vanishable", data -> {
         boolean dataBoolean = true;
@@ -80,42 +120,14 @@ public enum ItemTag {
             dataBoolean = false;
         return MxSkullItemStackBuilder.create(1)
                 .setSkinFromHeadsData("ghost")
-                .setName(ChatColor.GRAY + "Vanish")
+                .setName("<gray>Vanish")
                 .addBlankLore()
-                .addLore(ChatColor.GRAY + "Status: " + (dataBoolean ? ChatColor.GREEN + "Blijft" : ChatColor.RED + "Verdwijnt"))
+                .addLore("<gray>Status: " + (dataBoolean ? "<green>Blijft" : "<red>Verdwijnt"))
                 .addBlankLore()
-                .addLore(ChatColor.YELLOW + "Klik hier om de status te togglen.")
+                .addLore("<yellow>Klik hier om de status te togglen.")
                 .build();
     }, (mxInv, e) -> {
-        String key = "vanishable";
-        ItemStack is = e.getWhoClicked().getInventory().getItemInMainHand();
-        ItemMeta im = is.getItemMeta();
-
-        PersistentDataContainer container = im.getPersistentDataContainer();
-        String data = container.get(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING);
-
-        boolean dataBoolean = true;
-        if (data != null && data.equalsIgnoreCase("false"))
-            dataBoolean = false;
-        dataBoolean = !dataBoolean;
-        container.set(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING, dataBoolean + "");
-        String lore = ChatColor.RED + "Vanish";
-        List<Component> list = im.hasLore() ? im.lore() : new ArrayList<>();
-        if (dataBoolean) {
-            List<Component> newList = new ArrayList<>();
-            list.forEach(c -> {
-                if (!Functions.convertComponentToString(c).equalsIgnoreCase(lore)) {
-                    newList.add(c);
-                }
-            });
-            list = newList;
-        } else {
-            list.add(Component.text(lore));
-        }
-        im.lore(list);
-        is.setItemMeta(im);
-        e.getWhoClicked().closeInventory();
-        e.getWhoClicked().sendMessage(LanguageManager.getInstance().getLanguageString(LanguageText.ITEMTAG_CHANGED));
+        onClick(e, "vanishable", "Vanish");
     }),
     ITEM_LOCK("itemlock", data -> {
         boolean dataBoolean = true;
@@ -123,42 +135,19 @@ public enum ItemTag {
             dataBoolean = false;
         return MxSkullItemStackBuilder.create(1)
                 .setSkinFromHeadsData("redstone-block")
-                .setName(ChatColor.GRAY + "Item-Lock")
+                .setName("<gray>Item-Lock")
                 .addBlankLore()
-                .addLore(ChatColor.GRAY + "Status: " + (dataBoolean ? ChatColor.GREEN + "Verplaatsbaar" : ChatColor.RED + "Locked"))
+                .addLore("<gray>Status: " + (dataBoolean ? "<green>Verplaatsbaar" : "<red>Locked"))
                 .addBlankLore()
-                .addLore(ChatColor.YELLOW + "Klik hier om de status te togglen.")
+                .addLore("<yellow>Klik hier om de status te togglen.")
                 .build();
     }, (mxInv, e) -> {
-        String key = "itemlock";
-        ItemStack is = e.getWhoClicked().getInventory().getItemInMainHand();
-        ItemMeta im = is.getItemMeta();
-
-        PersistentDataContainer container = im.getPersistentDataContainer();
-        String data = container.get(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING);
-
-        boolean dataBoolean = true;
-        if (data != null && data.equalsIgnoreCase("false"))
-            dataBoolean = false;
-        dataBoolean = !dataBoolean;
-        container.set(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING, dataBoolean + "");
-        String lore = ChatColor.RED + "Item-Lock";
-        List<Component> list = im.hasLore() ? im.lore() : new ArrayList<>();
-        if (dataBoolean) {
-            List<Component> newList = new ArrayList<>();
-            list.forEach(c -> {
-                if (!Functions.convertComponentToString(c).equalsIgnoreCase(lore)) {
-                    newList.add(c);
-                }
-            });
-            list = newList;
-        } else {
-            list.add(Component.text(lore));
-        }
-        im.lore(list);
-        is.setItemMeta(im);
-        e.getWhoClicked().closeInventory();
-        e.getWhoClicked().sendMessage(LanguageManager.getInstance().getLanguageString(LanguageText.ITEMTAG_CHANGED));
+        onClick(e, "itemlock", "Item-Lock");
+        //        boolean dataBoolean = onClick(e, "itemlock", "Item-Lock");
+//
+//        if (!dataBoolean) {
+//            e.setCancelled(true);
+//        }
     }),
     PLACEABLE("placeable", data -> {
         boolean dataBoolean = true;
@@ -166,49 +155,21 @@ public enum ItemTag {
             dataBoolean = false;
         return MxSkullItemStackBuilder.create(1)
                 .setSkinFromHeadsData("piston")
-                .setName(ChatColor.GRAY + "Placeable")
+                .setName("<gray>Placeable")
                 .addBlankLore()
-                .addLore(ChatColor.GRAY + "Status: " + (dataBoolean ? ChatColor.GREEN + "Placeable" : ChatColor.RED + "Unplaceable"))
+                .addLore("<gray>Status: " + (dataBoolean ? "<green>Placeable" : "<red>Unplaceable"))
                 .addBlankLore()
-                .addLore(ChatColor.YELLOW + "Klik hier om de status te togglen.")
+                .addLore("<yellow>Klik hier om de status te togglen.")
                 .build();
     }, (mxInv, e) -> {
-        String key = "placeable";
-        ItemStack is = e.getWhoClicked().getInventory().getItemInMainHand();
-        ItemMeta im = is.getItemMeta();
-
-        PersistentDataContainer container = im.getPersistentDataContainer();
-        String data = container.get(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING);
-
-        boolean dataBoolean = true;
-        if (data != null && data.equalsIgnoreCase("false"))
-            dataBoolean = false;
-        dataBoolean = !dataBoolean;
-        container.set(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING, dataBoolean + "");
-        String lore = ChatColor.RED + "Unplaceable";
-        List<Component> list = im.hasLore() ? im.lore() : new ArrayList<>();
-        if (dataBoolean) {
-            List<Component> newList = new ArrayList<>();
-            list.forEach(c -> {
-                if (!Functions.convertComponentToString(c).equalsIgnoreCase(lore)) {
-                    newList.add(c);
-                }
-            });
-            list = newList;
-        } else {
-            list.add(Component.text(lore));
-        }
-        im.lore(list);
-        is.setItemMeta(im);
-        e.getWhoClicked().closeInventory();
-        e.getWhoClicked().sendMessage(LanguageManager.getInstance().getLanguageString(LanguageText.ITEMTAG_CHANGED));
+        onClick(e, "placeable", "Unplaceable");
     }),
     COLORBIND("colorbind", data -> {
         return MxSkullItemStackBuilder.create(1)
                 .setSkinFromHeadsData("blue-block")
-                .setName(ChatColor.GRAY + "Colorbind")
+                .setName("<gray>Colorbind")
                 .addBlankLore()
-                .addLore(ChatColor.YELLOW + "Klik hier om de colorbind van dit item aan te passen")
+                .addLore("<yellow>Klik hier om de colorbind van dit item aan te passen")
                 .build();
     }, (mxInv, e) -> {
         AtomicReference<List<Colors>> colors = new AtomicReference<>(new ArrayList<>());
@@ -223,12 +184,13 @@ public enum ItemTag {
 
         List<Pair<ItemStack, MxItemClicked>> list = new ArrayList<>();
         List<Colors> addedColors = new ArrayList<>();
+
         String key = "colorbind";
         ItemStack is = e.getWhoClicked().getInventory().getItemInMainHand();
         ItemMeta im = is.getItemMeta();
 
         PersistentDataContainer container = im.getPersistentDataContainer();
-        String specialTag = ChatColor.RED + "" + ChatColor.GRAY + ChatColor.GRAY + ChatColor.DARK_AQUA + ChatColor.UNDERLINE + ChatColor.RESET + ChatColor.DARK_RED + ChatColor.RESET;
+        String specialTag = "<red><gray><dark_aqua><underline><reset><dark_red><reset>";
         String data = container.get(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING);
         if (data != null) {
             for (String s : data.split(";")) {
@@ -239,51 +201,51 @@ public enum ItemTag {
 
         colors.get().forEach(color -> {
             list.add(new Pair<>(MxSkullItemStackBuilder.create(1)
-                    .setName(ChatColor.GRAY + color.getDisplayNameWithoutColor())
+                    .setName("<gray>" + color.getDisplayNameWithoutColor())
                     .setSkinFromHeadsData(color.getHeadKey())
                     .addBlankLore()
-                    .addLore(ChatColor.GRAY + "Status: " + (addedColors.contains(color) ? ChatColor.GREEN + "Toegevoegd" : ChatColor.RED + "Niet toegevoegd"))
+                    .addLore("<gray>Status: " + (addedColors.contains(color) ? "<green>Toegevoegd" : "<red>Niet toegevoegd"))
                     .addBlankLore()
-                    .addLore(ChatColor.YELLOW + "Klik hier om deze kleur te togglen.")
+                    .addLore("<yellow>Klik hier om deze kleur te togglen.")
                     .build(), (mxInv1, e1) -> {
                 if (addedColors.contains(color)) {
                     addedColors.remove(color);
-                    e.getWhoClicked().sendMessage(LanguageManager.getInstance().getLanguageString(LanguageText.COLORBIND_REMOVED));
+                    MSG.msg(e.getWhoClicked(), LanguageManager.getInstance().getLanguageString(LanguageText.COLORBIND_REMOVED));
                 } else {
-                    e.getWhoClicked().sendMessage(LanguageManager.getInstance().getLanguageString(LanguageText.COLORBIND_ADDED));
+                    MSG.msg(e.getWhoClicked(), LanguageManager.getInstance().getLanguageString(LanguageText.COLORBIND_ADDED));
                     addedColors.add(color);
                 }
                 StringBuilder dataTag = new StringBuilder();
                 addedColors.forEach(c -> {
                     dataTag.append(c.getType()).append(";");
                 });
-                if(!addedColors.isEmpty())
+                if (!addedColors.isEmpty())
                     dataTag.deleteCharAt(dataTag.length() - 1);
                 container.set(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING, dataTag.toString());
                 List<Component> loreList = im.hasLore() ? im.lore() : new ArrayList<>();
-                List<Component> newLoreList = loreList.stream().filter(lore -> !Functions.convertComponentToString(lore).contains(specialTag)).collect(Collectors.toList());
+                List<Component> newLoreList = loreList.stream().filter(lore -> !Functions.convertComponentToString(lore).contains(specialTag)).collect(Collectors.toList()).stream().map(c -> MiniMessage.miniMessage().deserialize(Functions.convertComponentToString(c))).toList();
                 if (!addedColors.isEmpty()) {
-                    newLoreList.add(Component.text(specialTag + ChatColor.BLUE + "Colorbind:"));
+                    newLoreList.add(MiniMessage.miniMessage().deserialize("<!i>" + specialTag + "<blue>Colorbind:"));
                     addedColors.forEach(c -> {
-                        newLoreList.add(Component.text(specialTag + ChatColor.GRAY + " - " + c.getDisplayName()));
+                        newLoreList.add(MiniMessage.miniMessage().deserialize("<!i>" + specialTag + "<gray> - " + c.getDisplayName()));
                     });
                 }
                 im.lore(newLoreList);
                 is.setItemMeta(im);
 
                 e1.setCurrentItem(MxSkullItemStackBuilder.create(1)
-                        .setName(ChatColor.GRAY + color.getDisplayNameWithoutColor())
+                        .setName("<gray>" + color.getDisplayNameWithoutColor())
                         .setSkinFromHeadsData(color.getHeadKey())
                         .addBlankLore()
-                        .addLore(ChatColor.GRAY + "Status: " + (addedColors.contains(color) ? ChatColor.GREEN + "Toegevoegd" : ChatColor.RED + "Niet toegevoegd"))
+                        .addLore("<gray>Status: " + (addedColors.contains(color) ? "<green>Toegevoegd" : "<red>Niet toegevoegd"))
                         .addBlankLore()
-                        .addLore(ChatColor.YELLOW + "Klik hier om deze kleur te togglen.")
+                        .addLore("<yellow>Klik hier om deze kleur te togglen.")
                         .build());
             }));
         });
 
 
-        MxInventoryManager.getInstance().addAndOpenInventory((Player) e.getWhoClicked(), MxListInventoryBuilder.create(ChatColor.GRAY + "Colorbind", MxInventorySlots.THREE_ROWS)
+        MxInventoryManager.getInstance().addAndOpenInventory((Player) e.getWhoClicked(), MxListInventoryBuilder.create("<gray>Colorbind", MxInventorySlots.THREE_ROWS)
                 .setAvailableSlots(MxInventoryIndex.ROW_ONE_TO_TWO)
                 .setPrevious(mxInv)
                 .setShowPageNumbers(false)
@@ -296,43 +258,14 @@ public enum ItemTag {
             dataBoolean = false;
         return MxSkullItemStackBuilder.create(1)
                 .setSkinFromHeadsData("barrier")
-                .setName(ChatColor.GRAY + "Clearable")
+                .setName("<gray>Clearable")
                 .addBlankLore()
-                .addLore(ChatColor.GRAY + "Status: " + (dataBoolean ? ChatColor.GREEN + "Clearable" : ChatColor.RED + "Unclearable"))
+                .addLore("<gray>Status: " + (dataBoolean ? "<green>Clearable" : "<red>Unclearable"))
                 .addBlankLore()
-                .addLore(ChatColor.YELLOW + "Klik hier om de status te togglen.")
+                .addLore("<yellow>Klik hier om de status te togglen.")
                 .build();
     }, (mxInv, e) -> {
-        String key = "clearable";
-        ItemStack is = e.getWhoClicked().getInventory().getItemInMainHand();
-        ItemMeta im = is.getItemMeta();
-
-        PersistentDataContainer container = im.getPersistentDataContainer();
-        String data = container.get(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING);
-
-        boolean dataBoolean = true;
-        if (data != null && data.equalsIgnoreCase("false"))
-            dataBoolean = false;
-        dataBoolean = !dataBoolean;
-        container.set(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING, dataBoolean + "");
-        String lore = ChatColor.RED + "Unclearable";
-        List<Component> list = im.hasLore() ? im.lore() : new ArrayList<>();
-        if (dataBoolean) {
-            List<Component> newList = new ArrayList<>();
-            list.forEach(c -> {
-                if (!Functions.convertComponentToString(c).equalsIgnoreCase(lore)) {
-                    newList.add(c);
-                }
-            });
-            list = newList;
-        } else {
-            list.add(Component.text(lore));
-        }
-        im.lore(list);
-        is.setItemMeta(im);
-
-        e.getWhoClicked().closeInventory();
-        e.getWhoClicked().sendMessage(LanguageManager.getInstance().getLanguageString(LanguageText.ITEMTAG_CHANGED));
+        onClick(e, "clearable", "Unclearable");
     }),
     DETECTABLE("detectable", data -> {
         boolean dataBoolean = true;
@@ -340,55 +273,77 @@ public enum ItemTag {
             dataBoolean = false;
         return MxSkullItemStackBuilder.create(1)
                 .setSkinFromHeadsData("sculk-sensor")
-                .setName(ChatColor.GRAY + "Detectable")
+                .setName("<gray>Detectable")
                 .addBlankLore()
-                .addLore(ChatColor.GRAY + "Status: " + (dataBoolean ? ChatColor.GREEN + "Detectable" : ChatColor.RED + "Undetectable"))
+                .addLore("<gray>Status: " + (dataBoolean ? "<green>Detectable" : "<red>Undetectable"))
                 .addBlankLore()
-                .addLore(ChatColor.YELLOW + "Klik hier om de status te togglen.")
+                .addLore("<yellow>Klik hier om de status te togglen.")
                 .build();
     }, (mxInv, e) -> {
-        String key = "detectable";
-        ItemStack is = e.getWhoClicked().getInventory().getItemInMainHand();
-        ItemMeta im = is.getItemMeta();
-
-        PersistentDataContainer container = im.getPersistentDataContainer();
-        String data = container.get(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING);
-
-        boolean dataBoolean = true;
-        if (data != null && data.equalsIgnoreCase("false"))
-            dataBoolean = false;
-        dataBoolean = !dataBoolean;
-        container.set(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key), PersistentDataType.STRING, dataBoolean + "");
-        String lore = ChatColor.RED + "Undetectable";
-        List<Component> list = im.hasLore() ? im.lore() : new ArrayList<>();
-        if (dataBoolean) {
-            List<Component> newList = new ArrayList<>();
-            list.forEach(c -> {
-                if (!Functions.convertComponentToString(c).equalsIgnoreCase(lore)) {
-                    newList.add(c);
-                }
-            });
-            list = newList;
-        } else {
-            list.add(Component.text(lore));
-        }
-        im.lore(list);
-        is.setItemMeta(im);
-
-        e.getWhoClicked().closeInventory();
-        e.getWhoClicked().sendMessage(LanguageManager.getInstance().getLanguageString(LanguageText.ITEMTAG_CHANGED));
+        onClick(e, "detectable", "Undetectable");
     });
-
 
     private final String persistentDataTag;
     private final ItemTagContainer container;
     private final MxItemClicked clicked;
-
     ItemTag(String persistentDataTag, ItemTagContainer item, MxItemClicked clicked) {
         this.persistentDataTag = persistentDataTag;
         this.container = item;
         this.clicked = clicked;
 
+    }
+
+    private static void onClick(InventoryClickEvent e, String key, String loreName) {
+        ItemStack is = e.getWhoClicked().getInventory().getItemInMainHand();
+        ItemMeta im = is.getItemMeta();
+
+        PersistentDataContainer container = im.getPersistentDataContainer();
+        NamespacedKey namespacedKey = new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), key);
+
+        String data = container.get(namespacedKey, PersistentDataType.STRING);
+
+        boolean dataBoolean = data != null && data.equalsIgnoreCase("true");
+        dataBoolean = !dataBoolean;
+
+        container.set(namespacedKey, PersistentDataType.STRING, String.valueOf(dataBoolean));
+
+        Component loreComponent = MiniMessage.miniMessage().deserialize("<!i><red>" + loreName);
+
+        List<Component> list = im.hasLore() ? new ArrayList<>(im.lore()) : new ArrayList<>();
+
+        if (!dataBoolean) {
+            list.add(loreComponent);
+        } else {
+            list.removeIf(c -> PlainTextComponentSerializer.plainText().serialize(c)
+                    .equalsIgnoreCase(PlainTextComponentSerializer.plainText().serialize(loreComponent)));
+        }
+
+        im.lore(list);
+        is.setItemMeta(im);
+
+        openItemTagInventory((Player) e.getWhoClicked(), is);
+        MSG.msg(e.getWhoClicked(), LanguageManager.getInstance().getLanguageString(LanguageText.ITEMTAG_CHANGED));
+    }
+
+    private static void openItemTagInventory(Player p, ItemStack is) {
+        PersistentDataContainer container = is.getItemMeta().getPersistentDataContainer();
+        List<Pair<ItemStack, MxItemClicked>> list = new ArrayList<>();
+        for (ItemTag value : ItemTag.values()) {
+            try {
+                list.add(new Pair<>(
+                        value.getContainer().getItem(container.get(new NamespacedKey(JavaPlugin.getPlugin(WieIsDeMol.class), value.getPersistentDataTag()), PersistentDataType.STRING)),
+                        value.getClicked()
+                ));
+            } catch(Exception ex) {
+                Logger.logMessage(LogLevel.ERROR, "Could not load itemtag: ");
+                ex.printStackTrace();
+            }
+        }
+        MxInventoryManager.getInstance().addAndOpenInventory(p, new MxListInventoryBuilder("<gray>ItemTags", MxInventorySlots.THREE_ROWS)
+                .setShowPageNumbers(false)
+                .setListItems(list)
+                .setAvailableSlots(MxInventoryIndex.ROW_ONE_TO_TWO)
+                .build());
     }
 
     public String getPersistentDataTag() {
